#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([mjkproxy], [1.0], [xiechengmin@minjieke.com])
AM_INIT_AUTOMAKE

# Checks for programs.

# Checks for libraries.

# Checks for header files.
AC_CONFIG_HEADERS([config.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_PROG_CC

# Checks for library functions.


AC_CONFIG_SRCDIR([src/main.c])


AC_CONFIG_FILES([Makefile
                 src/Makefile])


AC_OUTPUT
